"""故事相关 Pydantic 模型 / Story-related Pydantic models.

基于 docs/06-data-layer.md §5.2d / Based on docs/06-data-layer.md §5.2d.
架构方案 §6.3-6.6 / Architecture spec §6.3-6.6.

故事系统包含 / Story system includes:
- StoryArc: 剧情线进度（数据结构，非状态机）/ Storyline progress (data structure, not state machine)
- StoryHook: 伏笔追踪 / Foreshadowing tracker
- BranchPoint: 主角团决策导致的剧情分支 / Branch caused by PC decisions
- MainCastRoster: 主角团花名册（追踪变动历史）/ Main cast roster (tracks membership changes)
- Quest: 任务（关联剧情线）/ Quest (linked to story arcs)
"""

from pydantic import BaseModel, Field


class BranchPoint(BaseModel):
    """剧情分支点——主角团决策导致的故事分叉 / Story branch caused by PC decision."""

    tick: int                   # 发生的 tick / When it happened
    decision_maker: str         # 哪个 PC 做的决策 / Which PC decided
    decision: str               # 决定了什么 / What was decided
    consequence: str            # 导致了什么后果 / Resulting consequence
    arc_direction: str = ""     # 剧情因此走向了哪个方向 / Story direction taken


class StoryArc(BaseModel):
    """剧情线进度——数据结构，非状态机 / Storyline progress — data structure, not state machine."""

    id: str
    type: str = "main"          # 主线/支线 / main/side
    title: str = ""             # 标题 / Title
    stage: str = "\u94fa\u9648"  # 阶段: 铺陈/发展/冲突升级/高潮/收尾
    main_cast: list[str] = Field(default_factory=list)             # 参与的主角团 / Involved PCs
    supporting_actors: list[str] = Field(default_factory=list)     # 参与的配角 / Involved Actors
    key_event_ticks: list[int] = Field(default_factory=list)       # 关键节点 tick / Key event ticks
    branching_points: list[BranchPoint] = Field(default_factory=list)  # 分支点 / Branch points
    status: str = "setup"       # 状态: setup/active/climax/resolved/abandoned


class StoryHook(BaseModel):
    """伏笔追踪 / Foreshadowing tracker.
    
    DM 主动埋伏笔、追踪状态、适时回收或升级。
    DM plants hooks, tracks status, recovers or escalates as appropriate.
    """

    id: str
    planted_tick: int = 0           # 埋下的 tick / When planted
    description: str = ""           # 伏笔描述 / Description (e.g. "远处传来狼嚎")
    intended_payoff: str = ""       # 预期回收方式 / Intended payoff
    urgency: int = 10               # 多久内要回收 / Urgency (ticks to payoff)
    status: str = "planted"         # 状态: planted/escalated/paid_off/abandoned


class Quest(BaseModel):
    """任务——DM 生成，主角团尝试完成 / Quest — generated by DM, attempted by PCs."""

    id: str
    arc_id: str | None = None       # 关联哪条剧情线 / Linked story arc
    title: str = ""                 # 任务标题 / Quest title
    description: str = ""           # 任务描述 / Quest description
    status: str = "inactive"        # 状态: inactive/active/completed/failed
    progress: dict = Field(default_factory=dict)      # 进度数据 / Progress data
    assigned_pcs: list[str] = Field(default_factory=list)  # 接取的 PC / Assigned PCs
    created_tick: int | None = None     # 创建 tick
    completed_tick: int | None = None   # 完成 tick


class CastChangeEvent(BaseModel):
    """主角团花名册变动事件 / Main cast roster change event."""

    tick: int                   # 发生的 tick
    character_id: str           # 角色 ID
    event_type: str             # 变动类型: join/leave/death/betrayal
    reason: str = ""            # 原因 / Reason
    arc_id: str | None = None   # 关联剧情线


class MainCastRoster(BaseModel):
    """主角团花名册——追踪变动历史 / Main cast roster — tracks membership changes."""

    current_members: list[str] = Field(default_factory=list)          # 当前成员 / Current members
    history: list[CastChangeEvent] = Field(default_factory=list)      # 变动历史 / Change history
