%% SimGameWorld 数据模型关系图 / Data Model ER Diagram
%% 实体关系与引用链路 / Entity relationships and reference chains

erDiagram
    WorldState ||--o{ PlayerCharacter : "主角团"
    WorldState ||--o{ Actor : "配角"
    WorldState ||--o{ SceneObject : "场景对象"
    WorldState ||--o{ Item : "物品"
    WorldState ||--o{ StoryArc : "剧情线"
    WorldState ||--o{ StoryHook : "伏笔"
    WorldState ||--o{ Scene : "场景"
    WorldState ||--|| MainCastRoster : "花名册"

    PlayerCharacter ||--|| CharacterArc : "角色弧"
    PlayerCharacter ||--|| Equipment : "装备"
    PlayerCharacter ||--o{ InventorySlot : "背包"
    PlayerCharacter ||--o{ Relationship : "关系"

    Actor ||--o{ ActorFunction : "功能标签"
    Actor ||--o| Equipment : "装备"
    Actor ||--o{ InventorySlot : "背包"

    Item ||--o{ InventorySlot : "被引用"
    Item ||--o{ Equipment : "被装备"
    Item ||--o{ SceneObject : "含在场景中"

    StoryArc ||--o{ BranchPoint : "分支点"
    StoryArc ||--o{ PlayerCharacter : "主角参与"
    StoryArc ||--o{ Actor : "配角参与"

    MainCastRoster ||--o{ CastChangeEvent : "变动历史"

    PlayerCharacter {
        string id
        string name
        string role
        Attributes attributes
        CombatStats combat
        CharacterArc character_arc
        list values
        Equipment equipment
        list inventory
        float importance_accumulator
    }

    Actor {
        string id
        string name
        list functions
        dict function_data
        string motivation_injected
        bool dm_assigned
    }

    Item {
        string id
        ItemType item_type
        string rarity
        dict data
    }

    SceneObject {
        string id
        SceneObjectType object_type
        bool interactable
        dict interact_data
    }

    StoryArc {
        string id
        string stage
        list main_cast
        list branching_points
        string status
    }

    StoryHook {
        string id
        int planted_tick
        string description
        string status
    }
